--- a/manifest.json
+++ b/manifest.json
@@ -57,7 +57,7 @@
     "quickapp" : {},
     /* 小程序特有相关 */
     "mp-weixin" : {
-        "appid" : "",
+        "appid" : "wx1db000eae331347c",
         "setting" : {
             "urlCheck" : false
         },
